syntax = "proto3";

package api.user;

import "user.types.proto";

service UserService {
    rpc CreateUser(CreateUserReq) returns (UserRes) {
    }

    rpc UpdateUser(User) returns (UserRes) {
    }

    rpc DeleteUser(UserReq) returns (UserRes) {
    }

    rpc GetUser(UserReq) returns (stream User) {
    }
}

message CreateUserReq {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UserReq {
    string id = 1;
}

message UserRes {
    EUserStatus status = 1;
    string message = 2;
}
